--- a/backend/.env.example
+++ b/backend/.env.example
@@ -1,3 +1,6 @@
 PORT=4000
 MONGO_URL=mongodb://localhost:27017/sprintdesk
 CORS_ORIGIN=http://localhost:5173
+JWT_SECRET=change_me
+ACCESS_TOKEN_TTL_MIN=15
+REFRESH_TOKEN_TTL_DAYS=7
