--- a/backend/.env.example
+++ b/backend/.env.example
@@ -4,3 +4,4 @@ CORS_ORIGIN=http://localhost:5173
 JWT_SECRET=change_me
 ACCESS_TOKEN_TTL_MIN=15
 REFRESH_TOKEN_TTL_DAYS=7
+APP_BASE_URL=http://localhost:5173
