--- a/backend/.env.example
+++ b/backend/.env.example
@@ -5,3 +5,4 @@ JWT_SECRET=change_me
 ACCESS_TOKEN_TTL_MIN=15
 REFRESH_TOKEN_TTL_DAYS=7
 APP_BASE_URL=http://localhost:5173
+GOOGLE_CLIENT_ID=your_google_client_id
