Seed demo users and workspace (#9)
* Seed demo users and workspace

--- a/backend/.env.example
+++ b/backend/.env.example
@@ -11,3 +11,5 @@ SMTP_PORT=587
 SMTP_USER=your_smtp_user
 SMTP_PASS=your_smtp_pass
 SMTP_FROM="SprintDesk <no-reply@sprintdesk.dev>"
+DEMO_MODE=true
+DEMO_SEED_ON_START=true
