--- a/frontend/package.json
+++ b/frontend/package.json
@@ -10,10 +10,14 @@
   },
   "dependencies": {
     "@radix-ui/react-dialog": "^1.0.5",
+    "@radix-ui/react-dropdown-menu": "^2.1.2",
+    "@radix-ui/react-tabs": "^1.1.1",
+    "@radix-ui/react-tooltip": "^1.1.3",
     "@tanstack/react-query": "^5.51.1",
     "@hookform/resolvers": "^3.9.0",
     "axios": "^1.7.2",
     "clsx": "^2.1.1",
+    "lucide-react": "^0.462.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-hook-form": "^7.52.1",
