--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,40 +1,32 @@
-services:
-  mongo:
-    image: mongo:7
+﻿services:
+  postgres:
+    image: postgres:16
     ports:
-      - "27017:27017"
+      - "5432:5432"
+    environment:
+      - POSTGRES_DB=sprintdesk
+      - POSTGRES_USER=sprintdesk
+      - POSTGRES_PASSWORD=sprintdesk
     volumes:
-      - mongo_data:/data/db
-
-  redis:
-    image: redis:7-alpine
-    ports:
-      - "6379:6379"
+      - postgres_data:/var/lib/postgresql/data
 
   backend:
     build:
-      context: ./backend
+      context: ./sprintdesk-backend
       dockerfile: Dockerfile
     environment:
-      - PORT=4000
-      - MONGO_URL=mongodb://mongo:27017/sprintdesk
-      - CORS_ORIGIN=http://localhost:5173
+      - SPRING_PROFILES_ACTIVE=local
     ports:
-      - "4000:4000"
+      - "8080:8080"
     depends_on:
-      - mongo
-      - redis
-    volumes:
-      - ./backend:/app
-      - /app/node_modules
-    command: npm run dev
+      - postgres
 
   frontend:
     build:
       context: ./frontend
       dockerfile: Dockerfile
     environment:
-      - VITE_API_URL=http://localhost:4000
+      - VITE_API_URL=http://localhost:8080
     ports:
       - "5173:5173"
     depends_on:
@@ -45,4 +37,4 @@ services:
     command: npm run dev -- --host
 
 volumes:
-  mongo_data:
+  postgres_data:
