fix: docker backend datasource host

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -16,6 +16,9 @@
       dockerfile: Dockerfile
     environment:
       - SPRING_PROFILES_ACTIVE=local
+      - SPRING_DATASOURCE_URL=jdbc:postgresql://postgres:5432/sprintdesk
+      - SPRING_DATASOURCE_USERNAME=sprintdesk
+      - SPRING_DATASOURCE_PASSWORD=sprintdesk
     ports:
       - "8080:8080"
     depends_on:
