--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -12,10 +12,13 @@
 
   backend:
     build:
-      context: ./sprintdesk-backend
+      context: ./backend
       dockerfile: Dockerfile
     environment:
       - SPRING_PROFILES_ACTIVE=local
+      - SPRING_DATASOURCE_URL=jdbc:postgresql://postgres:5432/sprintdesk
+      - SPRING_DATASOURCE_USERNAME=sprintdesk
+      - SPRING_DATASOURCE_PASSWORD=sprintdesk
     ports:
       - "8080:8080"
     depends_on:
