backend: workspaces and membership phase

--- a/backend/.env.example
+++ b/backend/.env.example
@@ -10,3 +10,4 @@ JWT_REFRESH_COOKIE_NAME=sprintdesk_refresh
 JWT_REFRESH_COOKIE_SECURE=false
 JWT_REFRESH_COOKIE_SAMESITE=Lax
 JWT_REFRESH_COOKIE_PATH=/
+APP_BASE_URL=http://localhost:5173
