backend: add comments, kb, notifications, realtime, demo

--- a/backend/.env.example
+++ b/backend/.env.example
@@ -11,3 +11,5 @@ JWT_REFRESH_COOKIE_SECURE=false
 JWT_REFRESH_COOKIE_SAMESITE=Lax
 JWT_REFRESH_COOKIE_PATH=/
 APP_BASE_URL=http://localhost:5173
+DEMO_MODE=true
+DEMO_SEED_ON_START=true
