--- a/frontend/package.json
+++ b/frontend/package.json
@@ -25,7 +25,8 @@
     "react-router-dom": "^6.25.1",
     "remark-breaks": "^4.0.0",
     "remark-gfm": "^4.0.0",
-    "socket.io-client": "^4.7.5",
+    "@stomp/stompjs": "^7.0.0",
+    "sockjs-client": "^1.6.1",
     "sonner": "^1.5.0",
     "tailwind-merge": "^2.4.0",
     "zustand": "^4.5.4",
