--- a/backend/.env.example
+++ b/backend/.env.example
@@ -10,6 +10,11 @@ JWT_REFRESH_COOKIE_NAME=sprintdesk_refresh
 JWT_REFRESH_COOKIE_SECURE=false
 JWT_REFRESH_COOKIE_SAMESITE=Lax
 JWT_REFRESH_COOKIE_PATH=/
+GOOGLE_ENABLED=false
+GOOGLE_CLIENT_ID=
+OTP_MINUTES=10
+OTP_CODE_LENGTH=6
+OTP_RETURN_CODE=false
 APP_BASE_URL=http://localhost:5173
 DEMO_MODE=true
 DEMO_SEED_ON_START=true
