--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -14,6 +14,8 @@
     build:
       context: ./backend
       dockerfile: Dockerfile
+    env_file:
+      - ./backend/.env
     environment:
       - SPRING_PROFILES_ACTIVE=local
       - SPRING_DATASOURCE_URL=jdbc:postgresql://postgres:5432/sprintdesk
